replace List.of() to Arrays.asList()